Modify Content and moved visuals.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>CLEO Foundation</title>
     <style type="text/css">
         body{
+
             background-color: #EEEEf1;
         }
         #background_container{
@@ -46,7 +47,7 @@
         }
         .main{
             width: auto;
-            height: 96%;
+            height: 99%;
             padding-top: 20px;
         }
         .main_container{
@@ -95,7 +96,7 @@
         }
         .head{
             width: 100%;
-            height: 150px;
+            height: 125px;
             display: inline-block;
         }
         .tab{
@@ -126,7 +127,7 @@
             display: inline-block;
             vertical-align: bottom;
             line-height: 150px;
-            width: 80%;
+            width: 85%;
             text-align: center;
             margin-left: 5px;
             font-family: 'alteHaas', sans-serif;
@@ -143,11 +144,11 @@
         }
         .main_section{
             display: inline-block;
-            width: 95%;
+            width: 98%;
             font-family: 'alteHaas', sans-serif;
             margin-left: 10px;
             overflow: auto;
-            height: calc(90vh - 150px);
+            height: calc(90vh - 125px);
         }
         b{
             color: #62BBE9;
@@ -163,8 +164,8 @@
             width: 50%;
         }
         ul{
-            list-style-image: url('images/bullet.jpg');
-            line-height: 30px;
+            list-style-image: url('images/bullet.png');
+            line-height: 25px;
             width: 45%;
             display: inline-block;
             float: left;
@@ -219,7 +220,7 @@
             <div class="header">
                 <div class="head">
                     <div class="tab">
-                        <img src="images/ESFIhAbS_400x400.jpg" width="150px"></div>
+                        <img src="images/CLEO-icon_hi-res_sm.png" width="100px" style="padding-top: 15px; padding-left: 15px"></div>
                     <div class="tab slogan"> <span class="leadCharacter">C</span><span>HANGING</span> <span class="leadCharacter">L</span><span>IVES</span> <span  class="leadCharacter">E</span><span>VERY</span> <span  class="leadCharacter">O</span><span>PPORTUNITY</span>
                     </div>
                 </div>
@@ -235,22 +236,16 @@
 
                     <p>
                         <b>What is CLEO?</b><br>
-                        <p>CLEO Global's mission is of personal empowerment, allowing people to live the life that they deserve.</p>
+                        <p>CLEO Global's mission is one of personal empowerment, to provide a chance for people to be what they want. </p>
                     </p>
-                    <p>The vision of the CLEO project is to develop and promote
-                        a sustainable social and economic cooperation by changing the way individuals interact and exchange
-                        goods and services. CLEO scope is to provide tools to mobilize social capital, and collaboration by bringing people together harnessing the power of blockchain technology. Doing so allows CLEO to create a new social fabric which promotes the use of new channels and new solutions. The CLEO Platform will overcome obstacles to innovation, education and funding, in a sustainable, scalable manner, to address the social and economic problems brought to light, giving more freedom to those affected by poverty, poor health and limited education and achieve sustainable change.</p>
-                   <p>The underlying belief behind Bitcoin founder Satoshi Nakamoto, is that the power of blockchain could decentralize the wealth of the world. It is this notion that pushes CLEO to build a foundation secured by the TRUSTLESS principle, favoring mathematical certainty over faith in validity by third party.</p>
-                    <p>In order for CLEO to accomplish this, it will create a philanthropic social platform that will be the focal point
-                        of the decentralized nature
-                        of cryptocurrency. This platform will provide the
-                        tools to reinforce individual stakeholders in the blockchain ecosystem by supporting local communities and providing a use case for buying and selling goods and services. As such, this ecosystem will be able to establish a Network of Trust.</p>
-
+                    <p>The vision of the CLEO project is one of development and promotion of sustainable economic growth through cooperation. It does this by changing the ways individuals interact when exchanging goods and services, by using the blockchain. The scope of the CLEO project is to provide the tools which mobilize social capital, creating collaboration by bringing people together, harnessed by the power of blockchain.  Doing so allows CLEO to create a new social fabric which promotes the use of new avenues and new solutions. The CLEO platform overcomes many obstacles to innovation, education and funding by offering a sustainable, scalable infrastructure to address social and economic problems. This offers people plagued by poverty, poor health and limited education a chance to build their own freedom and achieve sustainable and long lasting change. </p>
+                    <p>The underlying belief behind Bitcoin founder Satoshi Nakamoto, is that the power of blockchain could decentralize the wealth of the world. It is this notion that pushes CLEO to build a foundation secured by the TRUSTLESS principle, favoring mathematical certainty over faith in validity by third party.
+                    <p>To build on Nakamoto’s vision, CLEO is building a philanthropic social platform which acts as a meeting point, towards the further decentralized world of crypto currency.   This platform will provide the tools which reinforces individual stakeholders and the encourages the blockchain ecosystem by supporting local communities. The use case for buying and selling goods/services on the CLEO blockchain is that the fees are used to pay-it-forward, establishing a network of trust. </p>
                     <p><b>How can CLEO help?</b></p>
                     <div class="bulletList">
                         <ul>
-                            <li>Give ownership of life back to the individual to inspire self worth</li>
-                            <li>Engage on an equal footing</li>
+                            <li>Give the means to an individual to build their self worth</li>
+                            <li>Engage everyone on an equal footing</li>
                             <li>Inspire new ideas to give people control over their own lives</li>
                             <li>Encourage a “pay it forward” incentive via distributed staking and voting that enables fair and transparent funding.</li>
                         </ul>
@@ -262,21 +257,29 @@
                         </ul>
                     </div>
                     <p><b>How can YOU help?</b></p>
-                    <img src="images/photo_2019-03-15_01-53-54.jpg" width="450" align="right" style="padding-bottom: 10px">
-                    <p>Define your legacy by making a difference.  Volunteers your talents / knowledge to help CLEO make a difference like never seen before.
-                       All help is welcomed, examples of skills are:
+                    <img src="images/IMG_0120.JPG" width="400" align="right" style="padding-right:5px; padding-left: 5px;">
+                    <p>Define your legacy by making a difference. Volunteer your talents / knowledge to help CLEO make a difference the like which has never been seen before. All help is welcome, examples of skills are:
                     </p>
                     <div class="bulletList2">
-                        <ul style="width: 40%;">
-                            <li>Legal</li>
+                        <ul style="width: 42%;">
+                            <li>Legals</li>
                             <li>Accounting</li>
                             <li>Developers</li>
-                        </ul><ul style="width: 40%; float: left">
+                            <li>Social Work</li>
+                            <li>Server Administrator</li>
+                            <li>Business Concepts</li>
+                        </ul><ul style="width: 42%; float: left">
                             <li>Case Workers</li>
-                            <li>Event Planing</li>
-                            <li>Promoting</li>
+                            <li>Event Planning and Stewarding</li>
+                            <li>Promotion/marketing</li>
+                            <li>Programmers</li>
+                            <li>Teaching/Tutoring/Supporting Learning</li>
                         </ul>
-                    </div><!--
+                        <p>Start your legacy today and contact us: info@cleoglobal.com</p>
+                    </div>
+
+
+                    <!--
                     <div class="bottom">
                         <form><br><br>
                             Get all the latest CLEO updates by signing up for CLEO News Letter
