added new image

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         </ul>
                     </div>
                     <p><b>How can YOU help?</b></p>
-                    <img src="images/IMG_0120.jpg" width="400" align="right" style="padding-right:5px; padding-left: 5px;">
+                    <img src="images/volunteer.jpg" width="400" align="right" style="padding-right:6px; padding-left: 5px;">
                     <p>Define your legacy by making a difference. Volunteer your talents / knowledge to help CLEO make a difference the like which has never been seen before. All help is welcome, examples of skills are:
                     </p>
                     <div class="bulletList2">
