added last section

--- a/index.html
+++ b/index.html
@@ -277,8 +277,11 @@
                         </ul>
                         <p>Start your legacy today and contact us: info@cleoglobal.com</p>
                     </div>
-
-
+                    <p><b>GET STARTED TODAY!!</b></p>
+                    <p>Get started right away and make a difference follow the Cleo Charity Raffle and the
+                        #The100DayChallenge on social media details below<br>(Click images to download PDF details)</p>
+                    <div style="width: 50%; display: inline-block; text-align: center; float: left;"><a href="images/100DayChallengeCleo.pdf" target="_blank"><img src="images/100day.jpg" width="325"></a></div>
+                    <div style="width: 50%; display: inline-block; text-align: center; float: left"><a href="images/raffle.jpg" target="_blank"><img src="images/raffle.jpg" width="525"></a></div>
                     <!--
                     <div class="bottom">
                         <form><br><br>
